# enhanced-discord-bot-llms

./: .dockerignore  README.md  cmd.sh  enhanced-discord-bot-llms.org  enhancing-discord-bots-with-llms-and-python.org  explore.org  pyproject.toml
docker/: Dockerfile.api  Dockerfile.bot
src/enhanced_discord_bot_llms/: __init__.py  constants.py  gaouapp.py  gaoubot.py  llm_svc.py
